// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


syntax = "proto2";

package collision_checking.geometry_shapes.proto;

import "collision_checking/geometry_shapes/eigen.proto";

message RGBA {
  optional double r = 1;
  optional double g = 2;
  optional double b = 3;
  optional double a = 4;
}

message Box {
  optional collision_checking.proto.Vector3dProto size = 1;
}

message Sphere {
  optional double radius = 1;
}

message Capsule {
  optional double length = 1;
  optional double radius = 2;
}

message MovedShape {
  optional ShapePrimitive shape = 1;
  optional collision_checking.proto.Pose3dProto pose = 2;
}

message ShapePrimitive {
  optional Box box = 1;
  optional Sphere sphere = 2;
  optional Capsule capsule = 3;
  repeated MovedShape sub_shapes = 4;
}

message Marker {
  optional collision_checking.proto.Pose3dProto pose = 4;
  optional RGBA color = 2;
  optional ShapePrimitive shape = 3;
}

message CompositeMarker {
  optional string name = 1;
  optional double timeout = 2;
  optional collision_checking.proto.Pose3dProto pose = 5;
  repeated Marker markers = 4;
}

// message CompositeMarkerArray {
//   option deprecated = true;

//   repeated CompositeMarker composite_markers = 2;

//   reserved 1;
// }
